--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 pandas
-scikit-learn
-joblib
 pyodbc
-dotenv
-jsonlines
+python-dotenv
 sqlalchemy
+langchain
+langchain-openai
+langchain-community
+faiss-cpu
